--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "jspdf": "^3.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "next": "^15.3.3",
     "next-auth": "5.0.0-beta.25",
     "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
@@ -80,7 +80,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "eslint-config-next": "^15.3.3",
     "postcss": "^8",
     "prisma": "6.3.1",
     "tailwindcss": "^3.4.1",
